--- a/index.html
+++ b/index.html
@@ -14,23 +14,103 @@
 
     <title>Frontend Mentor | Intro component with sign up form</title>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    Learn to code by watching others See how experienced developers solve
-    problems in real-time. Watching scripted tutorials is great, but
-    understanding how developers think is invaluable. Try it free 7 days then
-    $20/mo. thereafter First Name Last Name Email Address Password Claim your
-    free trial By clicking the button, you are agreeing to our Terms and
-    Services
-
-    <footer>
-      <p class="attribution">
-        Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+    <main class="page">
+      <div class="description">
+        <h1 class="description__title">Learn to code by watching others</h1>
+        <p class="description__text">
+          See how experienced developers solve problems in real-time. Watching
+          scripted tutorials is great, but understanding how developers think is
+          invaluable.
+        </p>
+      </div>
+      <div class="trial">
+        <div class="trial__info box-shadow">
+          <span class="trial__info--bold">Try it free 7 days</span> then $20/mo.
+          thereafter
+        </div>
+        <form
+          name="trialForm"
+          class="trial__form box-shadow"
+          method="post"
+          onsubmit="reset(); return false"
+        >
+          <div class="form__group">
+            <input
+              id="firstName"
+              name="firstName"
+              class="form__input"
+              type="text"
+              placeholder="First Name"
+              required
+            />
+            <div class="form__warning hidden">First Name cannot be empty</div>
+          </div>
+          <div class="form__group">
+            <input
+              id="lastName"
+              name="lastName"
+              class="form__input"
+              type="text"
+              placeholder="Last Name"
+              required
+            />
+            <div class="form__warning hidden">Last Name cannot be empty</div>
+          </div>
+          <div class="form__group">
+            <input
+              id="email"
+              name="email"
+              class="form__input"
+              type="email"
+              placeholder="Email Address"
+              required
+            />
+            <div class="form__warning hidden">
+              Looks like this is not an email
+            </div>
+          </div>
+          <div class="form__group">
+            <input
+              id="password"
+              name="password"
+              class="form__input"
+              type="password"
+              placeholder="Password"
+              required
+            />
+            <div class="form__warning hidden">Password cannot be empty</div>
+          </div>
+          <button class="form__button">claim your free trial</button>
+          <p class="form__footer">
+            By clicking the button, you are agreeing to our
+            <a class="form__footer--link" href="#">Terms and Services</a>
+          </p>
+        </form>
+      </div>
+    </main>
+    <footer class="footer">
+      <p class="footer__text">
+        <a class="footer__link" href="https://github.com/LoganF50"
+          >Logan Faschingbauer</a
+        >
+        |
+        <a
+          class="footer__link"
+          href="https://www.frontendmentor.io?ref=challenge"
+          target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#">Your Name Here</a>.
+        >
       </p>
     </footer>
     <script src="./js/main.js"></script>
